<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCalculateBanner"
        android:text="@string/calculateBanner"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="#EEEEEE"
        android:background="#009900"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextCalculateBanner">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:layout_below="@+id/editTextCalculateBanner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEnterLastDonationDate"
                android:text="@string/enterYourLast"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="#009900"
                android:layout_marginTop="10dp"/>

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEnterDate"
            android:background="@drawable/rounded_edittext"
            android:padding="10dip"
            android:layout_marginTop="15dp"
            android:hint="dd/mm/yyyy"
            android:drawableRight="@drawable/down1"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSubmit"
                android:background="@drawable/button_bg"
                android:layout_margin="15dp"
                android:text="@string/buttonSubmit"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLastDonationDate1"
                android:text="@string/LastDonationDate"
                android:textAlignment="center"
                android:textColor="#009900"
                android:textSize="27sp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLastDonationDate2"
                android:textAlignment="center"
                android:textColor="#009900"
                android:textSize="25sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNowYouCanDonate1"
                android:text="@string/nowYouCanDonate"
                android:textAlignment="center"
                android:textColor="#009900"
                android:textSize="24sp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNowYouCanDonate2"
                android:text="@string/nowYouCanDonateResult"
                android:textColor="#EEEEEE"
                android:textSize="40sp"
                android:textAlignment="center"
                android:background="#009900"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    </ScrollView>


</RelativeLayout>