<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.example.user.bloodbank.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="46dp"
            app:srcCompat="@drawable/splash_logo"
            android:id="@+id/imageView"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGiveBlood"
            android:text="@string/banner"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="3dp"
            android:textColor="#009900"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="9dp"
            android:id="@+id/textViewUserLogin"
            android:text="@string/userLogIn"
            android:textSize="29sp"
            android:textColor="#009900"/>

        <EditText
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="6dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dip"/>

        <EditText
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="6dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dip" />

        <Button
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp"
            android:id="@+id/buttonLogin"
            android:text="Login User"
            android:textSize="19sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg" />

        <TextView
            android:textAlignment="center"
            android:text="@string/notHaveAnAccount"
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#009900"
            android:layout_marginTop="29dp"/>

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>


</RelativeLayout>

