<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.example.user.bloodbank.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewBloodBankBd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayoutBloodBanner"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="46dp"
            app:srcCompat="@drawable/splash_logo"
            android:id="@+id/imageView"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGiveBlood"
            android:textAlignment="center"
            android:layout_marginTop="3dp"
            android:textColor="#009900"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/textViewUserRegistration"
            android:text="@string/userSignUp"
            android:textSize="29sp"
            android:textColor="#009900" />

        <EditText
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="6dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dip"/>

        <EditText
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="6dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dip" />
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="13sp"
            android:textColor="#FF0000"
            />

        <Button
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/buttonRegister"
            android:text="Register User"
            android:textSize="19sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"/>

        <TextView
            android:textAlignment="center"
            android:text="@string/alreadyRegister"
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#009900"
            android:layout_marginTop="29dp"/>

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>



</RelativeLayout>
